# net_franky

./: .gitignore  README.md  client_example.py  pyproject.toml  server.py  test.py  test_client.py
.github/workflows/: publish.yml  scheduled-tests.yml
net_franky/: __init__.py  cb_robot.py  setup.py
net_franky/franky/: __init__.py  __init__.pyi  _franky.pyi  motion.py  motion.pyi  reaction.py  reaction.pyi  robot.pyi  robot_web_session.py  robot_web_session.pyi
tests/: README.md  __init__.py  conftest.py  test_cb_robot.py  test_setup.py
