[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net_franky"
version = "0.0.0"
description = "Minimal pyproject for the net_franky package"
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{ name = "Yannik Blei" }
]

dependencies = [
    "scipy==1.16.2",
    "rpyc==6.0.2"
]

[project.optional-dependencies]

server = [
    "franky"
    ]
