[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net_franky"
version = "1.0.0"
description = "Minimal pyproject for the net_franky package"
readme = "README.md"
authors = [
	{ name = "Yannik Blei" }
]

dependencies = [
    "scipy",
    "rpyc==6.0.2"
]

[project.optional-dependencies]

server = [
    "franky-control"
    ]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
    ]
